[gd_scene load_steps=6 format=2]

[ext_resource path="res://challenges/week2/scenes/spaceship/spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://challenges/week2/scenes/main.gd" type="Script" id=2]
[ext_resource path="res://challenges/week2/scenes/map/map.tscn" type="PackedScene" id=3]
[ext_resource path="res://challenges/week2/scenes/diedMessage.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 596.142

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="map" parent="." instance=ExtResource( 3 )]

[node name="shoots" type="Node2D" parent="."]

[node name="meteor_field" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="meteor_spawn" type="Timer" parent="meteor_field"]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="meteor_field"]
position = Vector2( 9, 0 )
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="meteor_field/Area2D"]
shape = SubResource( 1 )

[node name="spaceship" parent="." instance=ExtResource( 1 )]

[node name="diedMessage" type="Node2D" parent="."]
visible = false
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="diedMessage"]
margin_left = -20.0
margin_top = -15.0
margin_right = 1042.0
margin_bottom = 619.0
color = Color( 0.345098, 0.054902, 0.0235294, 0.615686 )

[node name="Label" type="Label" parent="diedMessage"]
margin_left = -20.0
margin_top = 252.0
margin_right = 1042.0
margin_bottom = 266.0
text = "You died!"
align = 1

[node name="Button" type="Button" parent="diedMessage"]
margin_left = 468.0
margin_top = 286.0
margin_right = 556.0
margin_bottom = 316.0
text = "Try again"

[connection signal="timeout" from="meteor_field/meteor_spawn" to="." method="_on_meteor_spawn_timeout"]
[connection signal="area_exited" from="meteor_field/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="died" from="spaceship" to="." method="_on_spaceship_died"]
[connection signal="shooted" from="spaceship" to="." method="_on_spaceship_shooted"]
[connection signal="pressed" from="diedMessage/Button" to="diedMessage" method="_on_Button_pressed"]
